# templater

./: Cargo.toml  Cross.toml  README.md  justfile
src/: clipboard.rs  main.rs  scratch.rs  utils.rs
test-templates/: foo.txt
